[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://BulletManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://EnemyManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="world" type="Node"]
script = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 304 )

[node name="bullet_manager" parent="." instance=ExtResource( 3 )]

[node name="enemy_manager" parent="." instance=ExtResource( 4 )]

[node name="score_timer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]
